<resources>
    <string name="app_name">Healthy Tag</string>
    <string name="loginButton">Login</string>
    <string name="registerhere">Don\'t have an account? Register here!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nutritionix" translatable="false">
    <a href="www.nutritionix.com">www.nutritionix.com</a> </string>
    <string name="infoNutrition">All information that has been provided is by Nutritionix</string>
    <string name="verifiedDatabase">They provide with the largest verified database</string>
    <string name="groceryItems">734,185 Grocery Items</string>
    <string name="restaurantItems">158,760 Restaurant Items</string>
    <string name="commonItems">13,187 Common Foods</string>
    <string name="productName">Add Product</string>
    <string name="reset">Reset</string>
    <string name="discoverHere">Discover Here</string>
    <string name="welcomeString">Welcome </string>
    <string name="scanTag">Scan your NFC Tag to read your NFC Tag</string>
    <string name="scanUpdateTag">Scan your NFC Tag to update your NFC Tag</string>
    <string name="updateProfile">Update Profile</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="emailaddress">Email Address</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="register">Register</string>
    <string name="searchHere">Search Here</string>
    <string name="profile">Profile</string>
    <string name="searchDatabase">Search Database</string>
    <string name="calorieCalculation">Calorie Calculation</string>
    <string name="list">List of Products</string>
    <string name="Settings">Settings</string>
    <string name="Communication">Communication</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="share">Share</string>
    <string name="Exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="languageSupported">Language Supported by:</string>
    <string name="fatIntake">Fat Intake</string>
    <string name="sugarIntake">Sugar Intake</string>
    <string name="proteinIntake">Protein Intake</string>
    <string name="nutritionalSettings">Nutritional Settings</string>
    <string name="calorieIntake">Current Calorie Intake</string>
    <string name="enterGoal">Please enter the goal in which you expect your daily calorie intake to be</string>
    <string name="goalIntake">Calorie Goal Intake</string>
    <string name="goal">Goal</string>
    <string name="mode">Mode</string>
    <string name="nfcSummary">Enabling this mode would let users write to NFC Tags using Nutritionix API Database</string>
    <string name="adminModeEnabled">Enabled Administrator Mode</string>
    <string name="adminMode">Enable Administrator Mode</string>
    <string name="nfcAssessment">NFC Assessment</string>
    <string name="calorieCount">Calorie Count</string>
    <string name="selectNFC">Write to NFC Tag</string>
    <string name="selectProduct">Are you sure you would like to select this product??</string>
    <string name="addProduct">Add Product</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="match">Sorry, We could not match any of your foods</string>
    <string name="nfcDetected">NFC Tag Detected</string>
    <string name="empty">Empty Tag</string>
    <string name="correct">Correct details entered</string>
    <string name="incorrect">Incorrect details entered</string>
    <string name="profileUpdated">Profile has been updated</string>
    <string name="profileNotUpdated">Profile has not been updated</string>
    <string name="usernameempty">Username cannot be empty</string>
    <string name="passwordempty">Password cannot be empty</string>
    <string name="accountMade">Successful</string>
    <string name="accountNotMade">Unsuccessful</string>
    <string name="exists">User already exists</string>
    <string name="correctPin">Correct</string>
    <string name="UncorrectPin" translatable="false">Not correct pin</string>
    <string name="emptyPin">Empty</string>
    <string name="complete" translatable="false"> NFC Tag has been written</string>

</resources>