<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="380dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="239dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tag" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/infoNutrition"
        android:textAllCaps="false"
        android:textColor="@color/colourWhite" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/verifiedDatabase"
        android:textAllCaps="false"
        android:textColor="@color/colourWhite" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/groceryItems"
        android:textAllCaps="false"
        android:textColor="@color/colourWhite" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/restaurantItems"
        android:textAllCaps="false"
        android:textColor="@color/colourWhite" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/commonItems"
        android:textAllCaps="false"
        android:textColor="@color/colourWhite" />

    <TextView
        android:id="@+id/clickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autoLink="all"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/baloo"
        android:text="@string/nutritionix"
        android:textColor="@color/colourWhite"/>
</LinearLayout>