<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="267dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tag"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="357dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_person_black_24dp1"
            android:drawableLeft="@drawable/ic_person_black_24dp1"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/baloo"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/colourWhite" />
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="367dp"
            android:layout_height="50dp"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colourWhite"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/lock_icon" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="367dp"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:text="@string/loginButton"
            android:textColor="@color/colourWhite"
            android:fontFamily="@font/baloo"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="306dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/baloo"
            android:text="@string/registerhere"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>