<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Register">

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username"
        android:fontFamily="@font/baloo"
        android:textColorHint="@color/colourWhite"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colourWhite"
        android:fontFamily="@font/baloo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textColor="@color/colourWhite"
        android:background="@color/colorAccent"
        android:fontFamily="@font/baloo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="267dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/tag"/>


</androidx.constraintlayout.widget.ConstraintLayout>