<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|start">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"
                />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:indeterminate="false"
        android:isIndicator="true"
        android:numStars="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:fontFamily="@font/baloo"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="348dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:fontFamily="@font/baloo"
        android:text="@string/calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <EditText
        android:id="@+id/caloriesEditText"
        android:layout_width="348dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/fatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="361dp"
        android:layout_marginRight="361dp"
        android:fontFamily="@font/baloo"
        android:text="@string/fat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesEditText" />

    <EditText
        android:id="@+id/fatEditText"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatTextView" />

    <TextView
        android:id="@+id/sugarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="344dp"
        android:layout_marginRight="344dp"
        android:fontFamily="@font/baloo"
        android:text="@string/sugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatEditText" />

    <EditText
        android:id="@+id/sugarEditText"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugarTextView" />

    <TextView
        android:id="@+id/proteinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="344dp"
        android:layout_marginRight="344dp"
        android:fontFamily="@font/baloo"
        android:text="@string/protein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugarEditText" />

    <EditText
        android:id="@+id/proteinEditText"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>